--- a/src/app/components/home/main/main.component.html
+++ b/src/app/components/home/main/main.component.html
@@ -32,7 +32,7 @@
 
                     <p id="presentacion" class="items">{{perfil?.presentacion}}</p>
 
-                    <button id="contact" class="items"><a href="https://www.linkedin.com/in/arrua-valentin/" target="_blank">contact</a></button>
+                    <a href="https://www.linkedin.com/in/arrua-valentin/" target="_blank" class="items">contact</a>
 
             </div>
         </div>
