--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -59,6 +59,7 @@ a:hover {
   font-size: 1.5em;
   display: flex;
   align-items: center;
+  padding: 0 0.2em;
 }
 #user label {
   cursor: pointer;
