--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,4 +1,6 @@
-<div class="page1">
+<app-loading *ngIf="loading"></app-loading> 
+
+<div class="page1" *ngIf="!loading">
 
 
     <app-header (propagar)="recibirDato($event)"></app-header>
