--- a/src/app/components/home/main/main.component.css
+++ b/src/app/components/home/main/main.component.css
@@ -86,7 +86,7 @@ main {
 .items {
   margin: 1.3em 0 ;
 }
-.information button {
+.information a {
   background-color: black;
   padding: 10px 20px;
   border: 2px solid white;
@@ -94,7 +94,7 @@ main {
   font-size: 16px;
   cursor: pointer;
 }
-button:hover {
+.information a:hover {
   transform: scale(1.1);
 }
 
@@ -102,9 +102,7 @@ button:hover {
   display: none;
 }
 
-a {
-  color: white;
-}
+
 
 @media only screen and (max-width: 730px) {
   .showInfo {
@@ -125,7 +123,7 @@ a {
     display: flex;
     justify-content: center;
   }
-  .information button{
+  .information a{
     margin: 5px;
   }
 
