--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,4 +1,5 @@
-<main>
+<app-loading *ngIf="loading"></app-loading> 
+<main *ngIf="!loading">
     <app-header (propagar)="recibirDato($event)"></app-header>
 
             <!-- cuadro de usuario -->
