--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="login">
+<app-loading *ngIf="loading"></app-loading> 
+<div *ngIf="!loading" class="login">
 
 
 <app-login-header></app-login-header>
