--- a/src/app/components/login/new-account/new-account.component.html
+++ b/src/app/components/login/new-account/new-account.component.html
@@ -1,4 +1,5 @@
-<body>
+<app-loading *ngIf="loading"></app-loading> 
+<body *ngIf="!loading">
     <app-login-header></app-login-header>
 
     <main>
