change img to url

--- a/src/app/components/home/experience/experience.component.html
+++ b/src/app/components/home/experience/experience.component.html
@@ -41,8 +41,7 @@
     <div class="text">
         <h1>Coming Soon...</h1>
         <p>
-            Aun estoy buscando mi primera experiencia en el mundo IT, mientras tanto me sigo formando y practicando para
-            mejorar
+            I am still looking for my first experience in the IT world, meanwhile I continue training and practicing to improve
         </p>
     </div>
 
