--- a/src/app/components/home/profile/profile.component.html
+++ b/src/app/components/home/profile/profile.component.html
@@ -10,19 +10,19 @@
             </div>
 
             <div class="seccion">
-                <label>nombre:</label>
+                <label>name:</label>
                 <p> {{perfil?.nombre}} </p>
             </div>
             <div class="seccion">
-                <label>apellido:</label>
+                <label>surname:</label>
                 <p> {{perfil?.apellido}}</p>
             </div>
             <div class="seccion">
-                <label>ocupacion:</label>
+                <label>occupation:</label>
                 <p> {{perfil?.ocupacion}} </p>
             </div>
             <div class="seccion">
-                <label>empresa:</label>
+                <label>company:</label>
                 <p> {{perfil?.empresa}} </p>
             </div>
     
