--- a/src/app/components/home/home/home.component.css
+++ b/src/app/components/home/home/home.component.css
@@ -1,6 +1,7 @@
 .page1 {
   height: 100%;
-  background: url(../../../../assets/images/fondonuevo.png);
+  background-image: url(https://i.ibb.co/VLf0x3n/fondonuevo.png);
+  /* background: url(../../../../assets/images/fondonuevo.png); */
   background-size: cover;
   background-position: center;
 }
