--- a/src/app/components/home/proyects/proyects.component.css
+++ b/src/app/components/home/proyects/proyects.component.css
@@ -1,5 +1,6 @@
 main {
-  background: url(../../../../assets/images/fondonuevo.png);
+  /* background: url(../../../../assets/images/fondonuevo.png); */
+  background-image: url(https://i.ibb.co/VLf0x3n/fondonuevo.png);
   background-size: cover;
   background-position: center;
   height: fit-content;
