--- a/src/app/components/login/new-account/new-account.component.css
+++ b/src/app/components/login/new-account/new-account.component.css
@@ -1,5 +1,6 @@
 body{
-    background: url(../../../../assets/images/loginnuevo.jpg);
+    /* background: url(../../../../assets/images/loginnuevo.jpg); */
+    background-image: url(https://i.ibb.co/xDkbTNC/loginnuevo.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
