fix background image page not found

--- a/src/app/components/home/experience/experience.component.css
+++ b/src/app/components/home/experience/experience.component.css
@@ -2,8 +2,7 @@ main{
     min-height: 100vh;
     height: 100%;
     width: 100%;
-    /* background: url(../../../../assets/images/fondonuevo.png); */
-    background-image: url(https://i.ibb.co/VLf0x3n/fondonuevo.png);
+    background-image: url(https://i.postimg.cc/9QmMQD26/fondonuevo.png);
     background-size: cover;
     background-position: bottom;
 }
