--- a/src/app/components/home/home/home.component.css
+++ b/src/app/components/home/home/home.component.css
@@ -1,7 +1,6 @@
 .page1 {
   height: 100%;
-  background-image: url(https://i.ibb.co/VLf0x3n/fondonuevo.png);
-  /* background: url(../../../../assets/images/fondonuevo.png); */
+  background-image: url(https://i.postimg.cc/9QmMQD26/fondonuevo.png);
   background-size: cover;
   background-position: center;
 }
