--- a/src/app/components/login/login/login.component.css
+++ b/src/app/components/login/login/login.component.css
@@ -1,6 +1,5 @@
 .login { 
-    /* background: url(../../../../assets/images/loginnuevo.jpg); */
-    background-image: url(https://i.ibb.co/xDkbTNC/loginnuevo.jpg);
+    background-image: url(https://i.postimg.cc/SN7R4WBL/loginnuevo.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
