--- a/src/app/components/home/profile/profile.component.css
+++ b/src/app/components/home/profile/profile.component.css
@@ -1,6 +1,5 @@
 main {
-  /* background: url(../../../../assets/images/fondonuevo.png); */
-  background-image: url(https://i.ibb.co/xDkbTNC/loginnuevo.jpg);
+  background-image: url(https://i.postimg.cc/9QmMQD26/fondonuevo.png);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
