--- a/src/app/components/home/main/main.component.css
+++ b/src/app/components/home/main/main.component.css
@@ -14,6 +14,16 @@ main {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+#loading {
+  margin: 40px 0 20px 0;
+  height: 40vh;
+  width: 80%;
+  max-width: 1100px;
+  border: solid 1px white;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .header {
   width: 100%;
   display: flex;
