--- a/src/app/components/login/get-in/get-in.component.css
+++ b/src/app/components/login/get-in/get-in.component.css
@@ -3,6 +3,7 @@ main{
     justify-content: center;
     align-items: center;
     height: calc(100% - 80px);
+    padding: 10px 0;
 }
 
 .head {
@@ -16,10 +17,11 @@ main{
 .form {
     padding-bottom: 10px;
     border: white 2px solid; 
-    min-height: 55vh;
+    /* min-height: 55vh; */
     height: fit-content;
-    width: 25vw;
-    min-width: 250px;
+    /* width: 25vw; */
+width: 250px;
+    /* min-width: 250px; */
     margin: auto 0;
     background-color: rgba(0, 0, 0, 0.699);
 }
@@ -71,6 +73,7 @@ a{
 }
 a:hover{
     color: rgb(175, 175, 175);
+    cursor: pointer;
 }
 
 label{
