--- a/src/app/components/login/login-header/login-header.component.html
+++ b/src/app/components/login/login-header/login-header.component.html
@@ -7,13 +7,13 @@
     <div class="button" *ngIf="ruta != '/new-account'">
         <button routerLink="/new-account">
             <i class="fa-solid fa-user-plus" font-size="20px"></i>
-            <p>Create Account</p>
+            <p class="iconText">Create Account</p>
         </button>
     </div>
     <div class="button" *ngIf="ruta == '/new-account'">
         <button routerLink="/login">
             
-            <p>you have an account?</p>
+            <p class="iconText">you have an account?</p>
             <i class="fa-solid fa-arrow-right-to-bracket" font-size="20px"></i>
         </button>
     </div>
