--- a/src/app/components/home/main/main.component.css
+++ b/src/app/components/home/main/main.component.css
@@ -2,7 +2,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 80px);
+  /* height: calc(100vh - 80px); */
 }
 .principal {
   margin: 40px 0 20px 0;
