--- a/src/app/components/login/login-header/login-header.component.css
+++ b/src/app/components/login/login-header/login-header.component.css
@@ -27,3 +27,17 @@ p{
     font-size: 17px;
     padding: 5px;
 }
+
+
+@media only screen and (max-width: 550px) {
+.logos img {
+    display: none;
+}
+}
+
+
+@media only screen and (max-width: 415px) {
+    .iconText {
+        display: none;
+    }
+}
